--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "npm-package-trial",
+  "name": "@akshitbatra/npm-package-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [],
   "author": "",
