--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+        contents: read
+        packages: write
+        attestations: write
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
