--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@akshitbatra/npm-package-test": "^1.0.0"
+  }
 }
