--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akshitbatra/npm-package-test",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@akshitbatra/npm-package-test": "^1.0.0"
-  }
+  "dependencies": {}
 }
